// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1t7k1em=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-kbg59g=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots as link default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <a
    data-css-gl46pt=""
    disabled={false}
    href="https://duckduckgo.com"
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots as link with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <a
    data-css-6fhnty=""
    disabled={false}
    href="https://duckduckgo.com"
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="pencil icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots disabled flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-ddoehj=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1d44qr7=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1ss7dvd=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-ftbdlw=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="pencil icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots icon flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-ygj22v=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-16uzyo3=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-6fhnty=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon lone flat large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-186z8r0=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1kvw38x=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1od30u4=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-eyr4pd=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1dyka97=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-fxvrr1=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-120vbg3=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1jkhhbz=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-176djec=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-endbx2=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-zu526a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-q765s9=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-6fhnty=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-6fhnty=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1z05niy=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-8b1vtw=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-j6xdwj=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-c2qwlq=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-aa0j3a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots loading flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-eslwan=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-1ec065u=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1uaejkq=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading lone icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1dyka97=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    />
  </button>
</div>
`;

exports[`Storyshots loading medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading no icon, hidden text 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1uaejkq=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Text doesnt show when loading if no icon
    </span>
  </button>
</div>
`;

exports[`Storyshots loading primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1uaejkq=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1v0x9ld=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1sth75=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-1jut5p0=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-jyv8uk=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-12f5sv2"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with className 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    className={
      Object {
        "data-css-jxpnuu": "",
      }
    }
    data-css-6fhnty=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Green Button
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with style 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-6fhnty=""
    disabled={false}
    style={
      Object {
        "background": "red",
      }
    }
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Red Button
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through aria-expanded 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    aria-expanded={true}
    data-css-gl46pt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      aria-expanded
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through data-something 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    data-something="wow"
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Custom data attributes
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through not supported 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    onMouseOver={[Function]}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Should not mouseover
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through role 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    role="link"
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Role Link
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through title 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    style={Object {}}
    title="My caption"
  >
    <span
      data-css-1en8fmq=""
    >
      With title
    </span>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1uaejkq=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1v0x9ld=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-jyv8uk=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots with onClick clicks once 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-6fhnty=""
    disabled={false}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-1en8fmq=""
    >
      Clicks once
    </span>
  </button>
</div>
`;

exports[`Storyshots with ref ref to handle focus 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-gl46pt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-1en8fmq=""
    >
      Should be focused
    </span>
  </button>
</div>
`;
